--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-query": "^5.90.8",
+    "axios": "^1.13.2",
+    "firebase": "^12.6.0",
     "motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.5",
     "sweetalert2": "^11.26.3",
