--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-medium-image-zoom": "^5.4.0",
     "react-router": "^7.9.5",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.26.3",
