--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.8",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.25",
     "motion": "^12.23.24",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
